@@ -1,41 +1,54 @@
 package bloop;
 
+import bloop.exceptions.BloopException;
 import bloop.interpreter.Interpreter;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
-public class Main {
+
+public final class Main {
+
+    private Main() {} // utility class — no instances
 
     public static void main(String[] args) {
-
         if (args.length == 0) {
-            exit("Usage: java bloop.Main <file.bloop>");
+            printUsageError();
+            System.exit(1);
         }
 
-        Path filePath = Path.of(args[0]);
+        Path sourceFilePath = Paths.get(args[0]);
+        String sourceCode   = readSourceFile(sourceFilePath);
 
-        if (!filePath.toString().endsWith(".bloop")) {
-            exit("Error: File must have a .bloop extension");
-        }
+        runProgram(sourceCode);
+    }
 
+    // private helpers
+
+    private static String readSourceFile(Path filePath) {
         try {
-            String source = Files.readString(filePath);
-            new Interpreter().run(source);
-
+            return Files.readString(filePath);
         } catch (IOException e) {
-            if (!Files.exists(filePath)) {
-                exit("Error: File not found: '" + filePath + "'");
-            }
-            exit("Error: Could not read file: '" + filePath + "'");
+            System.err.println("Error: Cannot read file '" + filePath + "'");
+            System.err.println("       " + e.getMessage());
+            System.exit(2);
+            return null; // unreachable, satisfies compiler
         }
     }
 
-    // helper
+    private static void runProgram(String sourceCode) {
+        try {
+            new Interpreter().run(sourceCode);
+        } catch (BloopException e) {
+            System.err.println("BLOOP Error: " + e.getMessage());
+            System.exit(3);
+        }
+    }
 
-    private static void exit(String message) {
-        System.err.println(message);
-        System.exit(1);
+    private static void printUsageError() {
+        System.err.println("Usage:   java -cp out bloop.Main <file.bloop>");
+        System.err.println("Example: java -cp out bloop.Main examples/program1.bloop");
     }
 }
